--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@ Telegram: @hacker11000 //
 
         <div class="btns">
 
-          <div class="btn1"><a class="follow" href="https://github.com/krishna6688" target="_blank">FOLLOW</a></div>
+          <div class="btn1"><a class="follow" href="https://github.com/Pranav18262" target="_blank">FOLLOW</a></div>
 
-          <div class="btn2"><a class="more" href="https://krishna6688.me/info.html" target="_blank">MORE</a></div>
+          <div class="btn2"><a class="more" href="https://pranavxd.ml/" target="_blank">MORE</a></div>
 
         </div>
 
