--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Telegram: @hacker11000 //
 
                                         <!-- Favicon Image link -->
 
-  <link rel="icon" type="image/x-icon" href="https://telegra.ph//file/660aeec99ab55b254e732.jpg">
+  <link rel="icon" type="image/x-icon" href="https://telegra.ph/file/8906d39576723bc2ce187.jpg">
 
   <title>Pranav'S Info</title>  <!-- Page Title -->
 
@@ -186,7 +186,7 @@ Telegram: @hacker11000 //
 
           <div class="btn1"><a class="follow" href="https://github.com/Pranav18262" target="_blank">FOLLOW</a></div>
 
-          <div class="btn2"><a class="more" href="https://pranavxd.ml/" target="_blank">MORE</a></div>
+          <div class="btn2"><a class="more" href="http://pranavxd.ml/" target="_blank">MORE</a></div>
 
         </div>
 
