--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Telegram: @hacker11000 //
 
           <!-- Info here -->
 
-          <pre><p class="info" >Web Developer |•|Python-Telegram-Bots|•|</p></pre>
+          <pre><p class="info" >Web Developer |•|Python-Telegram|•|</p></pre>
 
           </pre>
 
